--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#6d28d9" />
+    <meta name="theme-color" content="#9163cb" />
     <title>Vite + React + TS</title>
   </head>
   <body>
