--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#9163cb" />
-    <title>Vite + React + TS</title>
+    <title>PK Finance</title>
   </head>
   <body>
     <div id="root"></div>
